gcc/ 	PR debug/23336 	* c-typeck.c (build_external_type): Mark used enum types. 	* dwarf2out.c (dwarf2out_abstract_function): Save and restore 	cfun also. 	(gen_subprogram_die): Whitespace fix. gcc/cp/ 	PR debug/23336 	* pt.c (tsubst_copy_and_build): Mark used enum types. 	* semantics.c (finish_id_expression): Likewise. gcc/testsuite/ 	PR debug/23336 	* lib/gcc-dg.exp (gcc-dg-debug-runtest): Suppress new tests 	at -g1. 	* gcc.dg/debug/enum-1.c, g++.dg/debug/enum-1.C, 	g++.dg/debug/enum-2.C: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@115853 138bc75d-0d04-0410-961f-82ee72b054a4